--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 
 !lib/editor/atto/plugins/kalturamedia/**/*
 !lib/editor/tinymce/plugins/kalturamedia/**/*
+!lib/editor/tiny/plugins/kalturamedia/**/*
 
 !createPackage.sh
 !incrementVersion.sh
